2010-08-25  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/shlwapi (ASSOCDATA): Update definition.

	Thank you to Frederic Deschamps for reporting the issue.

2010-08-25  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/winbase.h (COPY_FILE_OPEN_SOURCE_FOR_WRITE,
	COPY_FILE_ALLOW_DECRYPTED_DESTINATION, COPY_FILE_COPY_SYMLINK,
	COPY_FILE_NO_BUFFERING): Define.

	Thank you to Roland Schwingel for reporting the issue.

2010-08-25  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/winuser.h (HHOOK): Move definition from here...
	* include/windef.h: ...to here, as per MSDN.

	Thank you to Samuel Thibault for reporting the issue.

2010-08-25  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/winbase.h (GetEnvironmentStrings, GetEnvironmentStringsA): Per
	MSDN, change return type to LPCH.
	(GetEnvironmentStringsW): Per MSDN, change return type to LPWCH.

	Thank you to Emmanuel Stapf for reporting the issue.

2010-08-24  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/prsht.h (SNDMDG, POSTMSG): Fix typo.
	* include/windowsx.h (SNDMSG): Ditto.

2010-08-24  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/prsht.h (SNDMSG, POSTMSG): Define macros and use throughout.

	Thank you to Ozkan Sezer for reporting the issue.

2010-08-24  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/windowsx.h (SNDMSG): Define macro and use throughout.

	Thank you to Chris Oldwood for reporting the issue.

2010-08-24  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/oleacc.h (AccessibleObjectFromEvent): Correct definition.

	Thank you to Rick Walsh for reporting the issue.

2010-08-24  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/winbase.h (MoveFileWithProcessA, MoveFileWithProgressW): Define.

2010-08-24  Vinky  <rabbit_vinky@users.sourceforge.net>

	* include/winbase.h (OVERLAPPED): Correct definition.

2010-08-24  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>
